--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,41 @@
-# ignore everything in the root except the "wp-content" directory.
-!wp-content/
-
-# ignore everything in the "wp-content" directory, except:
-# "mu-plugins", "plugins", "themes" directory
-wp-content/*
-!wp-content/mu-plugins/
-!wp-content/plugins/
-!wp-content/themes/
-
-# ignore these plugins
-wp-content/plugins/hello.php
-
-# ignore specific themes
-wp-content/themes/twenty*/
-
-# ignore node dependency directories
+﻿# ignore node dependency directories
 node_modules/
 
 # ignore log files and databases
 *.log
 *.sql
 *.sqlite
+*.bak
+*.zip
+
+# ignore everything in the root except the "wp-content" directory.
+/*
+!wp-content/
+
+# ignore everything in the "wp-content" directory, except:
+# "mu-plugins", "plugins", "themes" directory
+wp-content/*
+!wp-content/plugins/
+
+# ignore specific themes
+wp-content/themes/twenty*/
+
+# Dont ignore our vendor folder
+!vendor/
+
+# track this file .gitignore (i.e. do NOT ignore it)
+!.gitignore
+!composer.json
+
+# track this file SQl Model.mwb (i.e. do NOT ignore it)
+!SQl Model.mwb
+
+# Include VS Code files, workspace
+!GHES.code-workspace
+!.vscode/
+
+# Ignore all plugins except ours 
+
+wp-content/plugins/*
+!wp-content/plugins/virtual-learning/
+
