esson status working

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,14 +8,13 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome",
-            "url": "http://ghes.test",
+            "url": "http://vlp.test",
             "webRoot": "${workspaceFolder}"
         },
         {
             "name": "Launch Firefox",
             "type": "firefox",
             "request": "launch",
-            "reAttach": true,
             "url": "http://vlp.test",
             "webRoot": "${workspaceFolder}"
         },
